# instpyr

./: setup.cfg
src/InstPyr/Apps/: Autotuner.py  OnlinePIDTuner.py  SysIdentifier.py
src/InstPyr/Control/: Autotuning.py  Filter.py  Noise.py  PID.py  Plant.py  Sensor.py  SysID.py  SysID_GEKKO.py  SysId.py  Waveform.py
src/InstPyr/Interfaces/: simulator.py
src/InstPyr/Logging/: Logger.py  test.csv
src/InstPyr/MyDevices/: Arroyo.py  HPLC.py  Lakeshore.py  Lakeshore_probe.py  RTD.py  Thermistor.py  WatlowPM.py  helpers.py  switch.py  thermocouple.py
src/InstPyr/Plotting/: FastPlotter.py  Plotter.py  PlotterWatch.py  mplwidget.py  plotparam.py  pyqtgraphwidget.py
src/InstPyr/Templates/: DualPlot.py  DualPlot_Bkend.py  DualPlot_PID.py  SinglePlot.py  SinglePlot_Bkend.py  SinglePlot_PID.py  Template.py  Template_Backend.py  Template_Backend_FastPlot.py  Template_FAST.py
src/InstPyr/UI/: DualPlotUI.py  DualPlotUI.ui  DualPlotUI_FAST.py  DualPlotUI_FAST.ui  SinglePlotUI.py  SinglePlotUI.ui  mainpanel.py  mainpanel.ui  mainpanel_autotuner.py  mainpanel_autotuner.ui  mainpanel_control.py  mainpanel_control.ui  mainpanel_control_w_annotate.ui  mainpanel_sysid.py  mainpanel_sysid.ui  plotlayout.py  plotlayout.ui
src/InstPyr/Utilities/: IO.py  shiftregister.py  watch.py
tests/: FullStackTest.py  Rigoltest.py  SolenoidTest.py  SwitchTest.py  pyqtgraphtest.py  test.py
tests/AppTests/: AutotunerLauncher.py  sysIdentifyLauncher.py
tests/ControlTests/: FullStackControl.py  SimplePID.py
tests/General/: Rigoltest.py  Varnametest.py
(+35 files in other folders)
