[metadata]
name = InstPyr
version = 1.0.0

[options]
package_dir=
    =src
install_requires =
    pyqt5
    scipy
    matplotlib
    varname
    control
    numpy
    pyfirmata
    pyvisa
    mcculw
    gekko
    LabJackPython
packages = find:
python_requires = >=3.6

[options.packages.find]
where=src